--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,18 @@
     package="com.example.android.reproductor">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/vinilo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/vinilo"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Black"
         android:launchMode="singleTop"
         android:screenOrientation="portrait">
+    <service android:name="com.example.android.reproductor.MusicService"></service>>
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -21,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <service android:name="com.example.android.reproductor.MusicService"></service>
         </activity>
+
     </application>
 </manifest>
