--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/vinilo"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Black"
+        android:theme="@android:style/Theme"
         android:launchMode="singleTop"
         android:screenOrientation="portrait">
     <service android:name="com.example.android.reproductor.MusicService"></service>>
